tests/success/return_if.bz
function main() -> int32
{
	let b = true;
	return if (b) {
		0
	} else {
		unreachable
	};
}
