tests/error/comptime/compare_pointers3.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		foo() > &i;
	});
}
